[FIX] sap.m.RadioButton: z-index of the focus before removed
BCP: 1670008266

--- a/src/sap.m/src/sap/m/themes/base/RadioButton.less
+++ b/src/sap.m/src/sap/m/themes/base/RadioButton.less
@@ -52,7 +52,6 @@
 	bottom: .625rem;
 	left: .75rem;
 	right: .625rem;
-	z-index: -1;
 }
 
 .sapMRbHasLabel.sapMRb:focus:before {
